--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "openai": "^3.2.1",
-    "openai-api": "^1.3.1"
+    "openai-api": "^1.3.1",
+    "ws": "^8.12.1"
   }
 }
