--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/alex4jdm/two-bots-ai#readme",
   "dependencies": {
+    "@google-cloud/text-to-speech": "^4.2.1",
     "dotenv": "^16.0.3",
     "openai": "^3.2.1",
     "openai-api": "^1.3.1",
