--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@google-cloud/text-to-speech": "^4.2.1",
     "dotenv": "^16.0.3",
+    "mp3-duration": "^1.1.0",
     "openai": "^3.2.1",
     "openai-api": "^1.3.1",
     "ws": "^8.12.1"
